[package]

name = "duktape_sys"
version = "0.0.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
links = "duktape"
build = "build.rs"

description = "Unsafe, low-level wrapper for duktape JavaScript interpreter"
license = "MIT"

repository = "https://github.com/emk/duktape-rs"

# Minimize distributed package size by excluding large, unused directories.
exclude = [
  "duktape/examples",
  "duktape/src-separate"
]

[build-dependencies]
gcc = "*"
